# ds-hw

./: .gitlab-ci.yml  .gitmodules  README.md  base.dockerfile
.gitlab-ci/: 1-guarantees.yml  10-practice-security.yml  2-practice-grpc.yml  3-http.yml  4-broadcast.yml  5-practice-messaging.yml  6-membership.yml  7-kv-sharding.yml  8-kv-replication.yml  9-kv-replication-v2.yml  base-image.yml
1-guarantees/: Dockerfile  readme.md  solution.py
1-guarantees/test/: Cargo.toml
10-practice-security/: README.md  docker-compose.yml
10-practice-security/auth/: Dockerfile  server.py  signature.pem
10-practice-security/kv/: Dockerfile  go.sum  server.py  signature.pub
10-practice-security/tests/: test_server.py
2-practice-grpc/: README.md  docker-compose.yml
2-practice-grpc/messenger/: client.dockerfile
2-practice-grpc/tests/: Dockerfile  test_client.py  test_server.py
3-http/: README.md  conftest.py  docker-compose.yml  file_state.py  grader.py  http.py  http_builder.py
3-http/server/: Dockerfile  http_messages.py  server.py  start
3-http/tests/: Dockerfile  hw_test.go  query.go  runner.go  test_classes.py  test_delete.py  (+5 more)
4-broadcast/: Dockerfile  readme.md  solution.md  solution.py
4-broadcast/test/: Cargo.toml
4-broadcast/test/src/: main.rs
5-practice-messaging/: README.md
6-membership/: Dockerfile  readme.md  solution.py
7-kv-sharding/: readme.md  solution.py
8-kv-replication/: readme.md  solution.md  solution.py
9-kv-replication-v2/: readme.md  solution.py
9-kv-replication-v2/test/: Cargo.toml
9-kv-replication-v2/test/src/: main.rs
(+18 files in other folders)
