[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"

[dependencies]
dslib = "0.1.0"
assertables = "3.2.2" # TODO: update
clap = "2.33.3" # TODO: update
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
sugars = "3.0.1"
