[package]
name = "kv-replication-v2"
version = "0.1.0"
edition = "2018"

[dependencies]
dslib = { path = "../../dslib" }
byteorder = "1.4.3"
decorum = "0.3.1"
log = "0.4.0"
env_logger = "0.8.4"
md5 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assertables = "3.2.2"
clap = "2.33.3"
rand = "0.8.4"
rand_pcg = "0.3.1"
sugars = "3.0.0"